apps/cluster-authz-manager/k8s/backend-deployment.yaml
apiVersion: v1
kind: Service
metadata:
  name: cluster-authz-manager-backend
  namespace: alt-default
spec:
  selector:
    app: cluster-authz-manager-backend
  ports:
    - port: 80
      targetPort: 8000
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: cluster-authz-manager-backend
  namespace: alt-default
spec:
  replicas: 1
  selector:
    matchLabels:
      app: cluster-authz-manager-backend
  template:
    metadata:
      labels:
        app: cluster-authz-manager-backend
    spec:
      imagePullSecrets:
        - name: dockerhub-regcred
      tolerations:
        - key: purpose
          operator: Equal
          value: general-apps
          effect: NoSchedule
        - key: purpose
          operator: Equal
          value: general-apps-small
          effect: NoSchedule
        - key: cloud.google.com/gke-spot
          operator: Equal
          value: "true"
          effect: NoSchedule
      containers:
        - name: backend
          image: docker.io/mylonasc/magarathea:cluster-authz-manager-backend-0.1.8
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 8000
          volumeMounts:
            - name: data
              mountPath: /app/data
      volumes:
        - name: data
          persistentVolumeClaim:
            claimName: cluster-authz-manager-data
